# ydlidar_x2-py-ros2-node

./: .gitignore  LICENSE  README.md  requirements.txt
ydlidarpy/: package.xml  setup.cfg  setup.py
ydlidarpy/config/: config.yaml
ydlidarpy/ydlidarpy/: x2_node.py  ydlidar_driver.py
