<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ydlidarpy</name>
  <version>1.0.0</version>
  <description>ROS2 node for YDLidar X2 LiDAR sensor</description>
  <maintainer email="nannigalaxy25@gmail.com">Nandan Manjunatha</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
